# lab-automation

./: .dockerignore  .gitignore  README.md  docker-compose.yaml
.github/workflows/: service.chibio-relay.yaml  service.control-tower.yaml  service.data-gateway.yaml  service.ot-builder.yaml  service.tecan-spark-relay.yaml
builds/service.control-tower/: Dockerfile
builds/service.ot-builder/: Dockerfile
docker/service.chibio-relay/: Dockerfile
docker/service.control-tower/: Dockerfile
docker/service.data-gateway/: Dockerfile
docker/service.tecan-spark-relay/: Dockerfile
docs/: architecture.md  development.md  getting-started.md  protocols.md
lib/: log.py  redis.py  riffyn.py  utils.py
lib/commands/: subscriber.py
lib/triggers/: api.py  subscriber.py
protocols/: README.md  chibio-example.json  ot-simple-dilution.json  publisher.py  pyproject.toml  serial-dilution.json  simple-dilution.json  tecan-spark-example.json  tecan-spark-test-od.json
protocols/examples/: chibio-bioreactor.json  ot-serial-dilution.json  ot-simple-dilution.json  tecan-spark-test-od.json
protocols/examples/chibio-relay/: bioreactor.json
protocols/examples/ot-builder/: plate-transfer.json  simple-dilution.json
protocols/examples/tecan-spark-relay/: measure-absorbance.json  measure-od.json
services/chibio-relay/: Makefile  README.md  main.py  publish.py  pyproject.toml
services/control-tower/: Makefile  README.md  main.py  pyproject.toml
services/data-gateway/: README.md  main.py  pyproject.toml
services/ot-builder/: Makefile  README.md  main.py
(+82 files in other folders)
